--- a/css/styles.css
+++ b/css/styles.css
@@ -71,10 +71,6 @@ ol {
   color: var(--color-white);
 }
 
-.section--footer {
-  padding: 0;
-}
-
 /* ── Contenedor ── */
 
 .container {
